--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.2.0",
     "@prisma/client": "5.1.1",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
@@ -27,9 +29,11 @@
     "prisma": "^5.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zod": "^3.21.4"
   }
 }
