--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "lucide-react": "^0.264.0",
-    "next": "13.4.12",
+    "next": "^13.4.13",
     "postcss": "8.4.27",
     "prisma": "^5.1.1",
     "react": "18.2.0",
