--- a/package.json
+++ b/package.json
@@ -11,19 +11,29 @@
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.2.0",
     "@prisma/client": "5.1.1",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
-    "next": "13.4.12",
+    "lucide-react": "^0.264.0",
+    "next": "^13.4.13",
     "postcss": "8.4.27",
     "prisma": "^5.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "tailwindcss-animate": "^1.0.6",
+    "typescript": "5.1.6",
+    "zod": "^3.21.4"
   }
 }
