--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.23.2",
     "@hookform/resolvers": "^3.2.0",
     "@prisma/client": "5.1.1",
     "@radix-ui/react-label": "^2.0.2",
