Add active host enabling

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@clerk/nextjs": "^4.23.2",
     "@hookform/resolvers": "^3.2.0",
     "@prisma/client": "5.1.1",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.4.4",
@@ -28,7 +29,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
-    "lucide-react": "^0.264.0",
+    "lucide-react": "0.263.1",
     "next": "^13.4.13",
     "postcss": "8.4.27",
     "prisma": "^5.1.1",
