--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "prisma:studio": "prisma studio",
     "db:push": "prisma db push",
     "db:up": "docker-compose up -d && sleep 2 && PGPASSWORD=password  psql -U user -h localhost -p 2429 -c \"create database dpsms_db;\"",
-    "db:down": "docker-compose down -v "
+    "db:down": "docker-compose down -v ",
+    "db:seed": "prisma db seed"
+  },
+  "prisma": {
+    "seed": "ts-node-esm --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.2",
@@ -22,7 +26,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@types/node": "20.4.4",
+    "@types/node": "^20.5.1",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
@@ -40,7 +44,10 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.6",
+    "typescript": "^5.1.6",
     "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.1"
   }
 }
